<resources>
    <string name="app_name">Android_MD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="VPA_titles_1">Permission Settings</string>
    <string name="VPA_titles_2">Select App</string>
    <string name="VPA_titles_3">Make Own Motion</string>
    <string name="VPA_titles_4">Done!</string>
    <string name="VPA_descs_1">Please allow permission to use EXEMO.</string>
    <string name="VPA_descs_2">Select the action to be executed through motion.</string>
    <string name="VPA_descs_3">Please register your own cool motion!</string>
    <string name="VPA_descs_4">The setup is complete! Try EXEMO!</string>
    <string name="app_infor_appList">Executable apps</string>
    <string name="app_infor_fList">Function List</string>
    <string name="frag_settings_limit_num_title">Limit the number of actions</string>
    <string name="frag_settings_limit_back_title">Background Execution</string>
    <string name="frag_settings_limit_num">Limit the number of actions you can run to 5.</string>
    <string name="frag_settings_limit_back">EXEMO runs in the background.</string>
    <string name="frag_settings_limit">Limitation</string>
    <string name="frag_settings_appInfor">App Information</string>
    <string name="frag_settings_review">Review</string>
    <string name="frag_settings_feedback">Feedback</string>
    <string name="frag_settings_donation">Donation</string>
    <string name="frag_settings_instruction">Instructions for use</string>
    <string name="howto_1">Press this button to add your motion</string>
    <string name="howto_2">※ Move after 0.5 seconds!</string>
    <string name="howto_3">Reset Button</string>
    <string name="drawing_title">Draw your motion</string>
</resources>
